apps/dssp-targetp-30/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-30
  namespace: dev
  labels:
    app: dssp-targetp-30
    backstage.io/kubernetes-id: dssp-targetp-30
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-30
  template:
    metadata:
      labels:
        app: dssp-targetp-30
        backstage.io/kubernetes-id: dssp-targetp-30
        environment: dev
    spec:
      containers:
        - name: dssp-targetp-30
          image: chaitanyapandeygspann/dssp-targetp-30:1.0.1
          ports:
            - containerPort: 5000
