apps/dssp-targetp-30/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetp-30
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetp-30
    environment: dev
spec:
  selector:
    app: dssp-targetp-30
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
